# Python-ci-make-template

./: .gitignore  CHANGELOG.md  Makefile  README.md  cliff.toml  installer.iss  project.mk  pyproject.toml  qt.mk
myapp/: __init__.py  cli.py  core.py  project.py
tests/: test_core.py
