[project]
name = "python-ci-make-template"
version = "0.0.1"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["myapp"]


[dependency-groups]
dev = [
	"mypy",
	"pdoc",
	"pytest",
	"pytest-cov",
	"ruff",
]

