[project]
name = "python-ci-make-template"
version = "0.0.2"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["myapp"]


[dependency-groups]
dev = [
	"ty",
	"pdoc",
	"pytest",
	"pytest-cov",
	"ruff",
]

